[tool.poetry]
name = "floorplan-dimensioning-tool"
version = "0.1.0"
description = ""
authors = ["Alberto Santagostino"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.2"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
